404 error is fixed, background img works correctly on mobile version, hiv er works on mobile as well

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,8 +1,12 @@
 .header {
   background-image: url(../images/photos/header.png);
   background-size: cover;
-  background-position: center;
+  background-position: -210px 0;
   margin-bottom: 120px;
+
+  @include onTablet {
+    background-position: center;
+  }
 
   &__content {
     display: flex;
@@ -38,7 +42,7 @@
   }
 
   &__title {
-    margin-top: 500px;
+    margin-top: 242px;
     margin-bottom: 0;
     font-size: 32px;
     font-style: italic;
