--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -7,25 +7,25 @@
   text-decoration: none;
 
   &__tooltip {
-    display: none;
-    @include onDekstop {
-      position: absolute;
-      right: 100%;
-      transform: translateY(-50%);
-      transition: opacity 0.3s;
-      top: 50%;
-      display: block;
-      width: max-content;
-      padding-right: 12px;
-      pointer-events: none;
-      opacity: 0;
-      font-size: 12px;
-      font-weight: 700;
-      line-height: 16px;
-      letter-spacing: 2px;
-      text-align: right;
-      color: $colorMain;
-    }
+    // display: none;
+
+    position: absolute;
+    right: 100%;
+    transform: translateY(-50%);
+    transition: opacity 0.3s;
+    top: 50%;
+    display: block;
+    width: max-content;
+    padding-right: 12px;
+    pointer-events: none;
+    opacity: 0;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 2px;
+    text-align: right;
+    color: $colorMain;
+
   }
 
   &:hover &__tooltip {
@@ -37,10 +37,12 @@
     background-image: url(../images/menu_320.svg);
     height: 12px;
     width: 18px;
+
     @include onTablet {
       height: 18px;
       width: 24px;
     }
+
     @include onDekstop {
       &:hover {
         background-image: url(../images/menu-hover.svg);
